# AudioVisual-byQt-with-opengl

./: AudioDeal.h  CMakeLists.txt  ImageButton.qml  LICENSE  Main.qml  README.md  fShader.glsl  libfftw3-3.lib  main.cpp  main.qrc  myaudioplayer.cpp  myaudioplayer.h  spectrum3d.cpp  spectrum3d.h  vShader.glsl
